--- a/IV/Lab's/CM_Lab7/CM_Lab7.vcxproj
+++ b/IV/Lab's/CM_Lab7/CM_Lab7.vcxproj
@@ -128,8 +128,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CM_Lab7.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Inv.h" />
+    <ClInclude Include="Matr.h" />
     <ClInclude Include="Methods.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
