--- a/IV/Lab's/CM_Lab7/CM_Lab7.vcxproj.filters
+++ b/IV/Lab's/CM_Lab7/CM_Lab7.vcxproj.filters
@@ -18,9 +18,18 @@
     <ClCompile Include="CM_Lab7.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Methods.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Inv.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Matr.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
